use jlink to reduce container size